# Stack-Skope

.emergent/: emergent.yml
.emergent/cron/: webhook-crons
memory/: PRD.md
stackscope/: .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Directory.Build.props  LICENSE  README.md  StackScope.sln  buf.yaml  build_linux.sh  build_windows.ps1
stackscope/.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
stackscope/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
stackscope/.github/workflows/: codeql.yml  dotnet-build.yml  msi-package.yml  native-workers.yml  proto-lint.yml  python-worker.yml
stackscope/adapters/Architectures/: AdapterHelpers.cs  AllAdapters.cs  ArchitectureRegistry.cs  IArchitectureAdapter.cs  LlamaAdapter.cs  StackScope.Adapters.Architectures.csproj
stackscope/adapters/Drivers/Cpu/: CpuCaptureBackend.cs  StackScope.Adapters.Drivers.Cpu.csproj
stackscope/adapters/Drivers/Cuda/: CuptiCaptureBackend.cs  CuptiInterop.cs  NvtxRange.cs  StackScope.Adapters.Drivers.Cuda.csproj
stackscope/adapters/Drivers/Rocm/: RocProfilerInterop.cs  RocmCaptureBackend.cs  StackScope.Adapters.Drivers.Rocm.csproj
stackscope/adapters/Drivers/Vulkan/: StackScope.Adapters.Drivers.Vulkan.csproj  VulkanCaptureBackend.cs  VulkanCaptureBridge.cs  VulkanInterop.cs
stackscope/adapters/Formats/Gguf/: GgufReader.cs  GgufTypes.cs  StackScope.Adapters.Formats.Gguf.csproj
stackscope/adapters/Formats/SafeTensors/: SafeTensorsReader.cs  StackScope.Adapters.Formats.SafeTensors.csproj
stackscope/adapters/Formats/TensorFlow/: ProtoReader.cs  SavedModelReader.cs  StackScope.Adapters.Formats.TensorFlow.csproj
stackscope/adapters/Formats/Transformers/: StackScope.Adapters.Formats.Transformers.csproj  TransformersRepoReader.cs
stackscope/adapters/Runtimes/: IRuntimeAdapter.cs  LlamaCppWorkerClient.cs  PythonWorkerClient.cs  StackScope.Adapters.Runtimes.csproj
stackscope/app/desktop/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ShellViewModel.cs  StackScope.Desktop.csproj  app.manifest
stackscope/app/desktop/Behaviors/: SelectionDrives.cs
stackscope/app/desktop/Commands/: Commands.cs
stackscope/app/desktop/Controls/: BreadcrumbBar.xaml  BreadcrumbBar.xaml.cs  TokenScrubber.xaml  TokenScrubber.xaml.cs
stackscope/app/desktop/Converters/: Converters.cs  ListRankConverter.cs
stackscope/app/desktop/Services/: FilePicker.cs  PowerShellRunner.cs  PythonCli.cs
stackscope/app/desktop/State/: SelectionState.cs  WorkspaceState.cs
stackscope/app/desktop/Themes/: Dark.xaml  Tokens.xaml
stackscope/app/desktop/ViewModels/: AblationPresetsViewModel.cs  AllViewModels.cs  (+13 more)
stackscope/core/: StackScope.Core.csproj
stackscope/core/Analysis/: AttributionGraph.cs  CircuitTracer.cs  DeterminismAuditor.cs  DivergenceDetector.cs  NumericalHealth.cs  QuantizationDiff.cs
stackscope/core/Capture/: CapturePipeline.cs  ICaptureBackend.cs
stackscope/core/Comparison/: DistributionStats.cs  HeadDiffAnalyzer.cs  TransactionComparer.cs
stackscope/core/Correlation/: CorrelatedPair.cs  CorrelationConfidence.cs  CorrelationEngine.cs
stackscope/core/Models/: AblationPreset.cs  ArchitectureFamily.cs  ExportedAblationPreset.cs  LayerGraph.cs  MemoryEstimate.cs  PinnedDiff.cs  QuantizationInfo.cs  ReproducibilityManifest.cs  SnapshotAnnotation.cs  TensorInfo.cs  TokenizerInfo.cs  UnifiedModelDescriptor.cs
stackscope/core/Queries/: EventQuery.cs  QueryEngine.cs
stackscope/core/Storage/: EventRecord.cs  EventStore.cs  MmapEventLog.cs  SqliteIndex.cs
stackscope/core/Transactions/: EventKind.cs  InferenceTransaction.cs  TraceMarker.cs  TransactionEvent.cs  Ulid.cs
stackscope/docs/: BUILD.md  DEFERRED.md
stackscope/packaging/wix/: Bundle.wxs  License.rtf  Product.wxs  README.md  build.ps1
stackscope/proto/: coordinator.proto  events.proto  worker.proto
stackscope/scripts/: gen_proto.sh
stackscope/services/: CaptureService.cs  ModelIntrospectionService.cs  ProjectService.cs  QueryService.cs  StackScope.Services.csproj
stackscope/services/host/: CaptureBackendFactory.cs  CoordinatorService.cs  Program.cs  StackScope.Coordinator.csproj  WorkerLauncher.cs
stackscope/storage/: README.md
stackscope/tests/Adapters.Tests/: ArchitectureAdapterTests.cs  GgufReaderTests.cs  SafeTensorsReaderTests.cs  StackScope.Adapters.Tests.csproj
stackscope/tests/Core.Tests/: AblationPresetStoreTests.cs  AnnotationStoreTests.cs  AttributionGraphTests.cs  CaptureBackendFactoryTests.cs  CorrelationEngineTests.cs  DeterminismAuditorTests.cs  DistributionStatsTests.cs  DivergenceDetectorTests.cs  EventStoreRoundTripTests.cs  ExportedPresetSchemaTests.cs  HeadDiffAnalyzerTests.cs  NumericalHealthTests.cs  PinnedDiffStoreTests.cs  ProjectServiceAutoCompareTests.cs  QuantizationDiffTests.cs  QueryEngineTests.cs  ReproducibilityManifestTests.cs  StackScope.Core.Tests.csproj  UlidTests.cs
stackscope/tests/integration/: test_worker_roundtrip.py
stackscope/tests/python_worker_tests/: __init__.py  conftest.py  test_ablation_range.py  test_adapter_contracts.py  test_bundle.py  test_devices.py  test_dry_run_hooks.py  test_golden_capture.py  test_grpc_service_wiring.py  test_hooks.py  test_jsonl_export.py  test_manifest.py  test_markers.py  test_mcp_server.py
stackscope/workers/inference_worker_py/: README.md  pyproject.toml  requirements.txt
stackscope/workers/inference_worker_py/src/stackscope_worker/: __init__.py  anomaly.py  attach.py  attention_capture.py  bundle.py  devices.py  dry_run.py  grpc_service.py  hooks.py  jsonl_export.py  manifest.py  markers.py  mcp_server.py  repro.py  tail.py  worker.py
stackscope/workers/inference_worker_py/src/stackscope_worker/_generated/: __init__.py
stackscope/workers/instrumentation_agent/: README.md
stackscope/workers/llamacpp_worker/: CMakeLists.txt  README.md
stackscope/workers/llamacpp_worker/src/: callbacks.c  main.cc  worker.c  worker.h
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
test_reports/pytest/: pytest_results.xml
(+56 files in other folders)
