[project]
name = "stackscope-inference-worker"
version = "0.1.0"
description = "StackScope Python inference worker: PyTorch/Transformers with per-op hook capture."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "StackScope contributors" }]
dependencies = [
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "protobuf>=5.28.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "safetensors>=0.4.5",
    "numpy>=1.26.0",
    "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.24.0", "ruff>=0.6.0"]

[project.scripts]
stackscope-worker = "stackscope_worker.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# The worker uses intentional compact one-liners in narrow-guard functions
# (e.g. is_attention_projection's `if X: return Y` chain). We keep that
# stylistic choice — the readability win outweighs pep8-strict.
extend-ignore = ["E701", "E702"]
